--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@expo/webpack-config": "~0.16.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-web": "0.17.7",
-    "webpack-dev-server": "^4.9.2",
-    "expo-app-loading": "~2.0.0"
+    "react-navigation-stack": "^2.10.4",
+    "webpack-dev-server": "^4.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
